--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="Laravel Shop"
 APP_ENV=local
 APP_KEY=base64:+m8KPNU3Id6LzMzTvuHlEORy30+RdtT4dMxrbERBt4Y=
 APP_DEBUG=true
